demos/nginx-staging/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo
  namespace: enlight-staging
  labels:
    app: nginx-demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
